--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,27 +1,321 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="#FFFCF0"
+        android:padding="10dp"
+        android:layout_gravity="center">
+
+        <TextView
+            android:id="@+id/headerTitle"
+            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="15dp"
+            android:text="@string/header_title"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+        android:id="@+id/contentTitle"
+        android:text="@string/content_title"
+        android:textColor="@color/black"
+        android:paddingHorizontal="15dp"
+        android:paddingBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/tvSlogan"
+        android:id="@+id/tv1"
+        android:text="@string/heading1"
+        android:textColor="@color/black"
+        android:paddingHorizontal="25dp"
+        android:paddingTop="15dp"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+<!--    <ListView-->
+<!--        android:id="@+id/lvShoes"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="1"-->
+<!--        tools:listitem="@layout/row_shoe" />-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewShoes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingHorizontal="16dp"/>
+
+    <TextView
+        android:id="@+id/tv2"
+        android:text="@string/heading3"
+        android:textColor="@color/black"
+        android:paddingHorizontal="25dp"
+        android:paddingTop="15dp"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewShoes2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingHorizontal="16dp"/>
+
+    <TextView
+        android:id="@+id/heading2"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="@string/heading2"
+        android:layout_gravity="center"
+        android:paddingVertical="10dp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_marginTop="8dp"
+        android:paddingBottom="20dp"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="@string/content1"
+                android:layout_marginLeft="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="@string/content2"
+                android:layout_marginLeft="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="@string/content3"
+                android:layout_marginLeft="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="?colorPrimary"
-        android:gravity="center"
-        android:paddingVertical="5dp"
-        android:text="@string/slogan"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:background="#f6f6f5"
+        android:padding="15dp">
+        <TextView
+            android:text="@string/tv1"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:textSize="18sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
 
-    <ListView
-        android:id="@+id/lvShoes"
+        <TextView
+            android:text="@string/contentTv1"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textSize="14sp"
+            android:layout_marginVertical="15dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        tools:listitem="@layout/row_shoe" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:background="#f6f6f5"
+        android:padding="15dp">
+        <TextView
+            android:text="@string/tv2"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:textSize="18sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:text="@string/contentTv2"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textSize="14sp"
+            android:layout_marginVertical="15dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:background="#f6f6f5"
+        android:padding="15dp">
+        <TextView
+            android:text="@string/tv3"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:textSize="18sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:text="@string/contentTv3"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textSize="14sp"
+            android:layout_marginVertical="15dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:padding="20dp"
+        android:background="@color/black"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:src="@drawable/logo"
+            android:layout_width="170dp"
+            android:layout_height="100dp"/>
+        <TextView
+            android:text="LET US HELP YOU"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginVertical="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="Sizing Instruction"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="Privacy"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="Tearms of Service"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="Be a Zero Soles Affiliate"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="Avoiding Fake Sites"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="About Us"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="Accessibility Support"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_marginTop="40dp"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/ig"
+                android:layout_marginRight="10dp"
+                android:layout_width="50dp"
+                android:layout_height="40dp"/>
+            <ImageView
+                android:src="@drawable/fb"
+                android:layout_width="50dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="40dp"/>
+            <ImageView
+                android:src="@drawable/yt"
+                android:layout_width="50dp"
+                android:layout_height="40dp"/>
+        </LinearLayout>
+        <TextView
+            android:text="@string/footer"
+            android:layout_marginVertical="30dp"
+            android:textColor="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
+</ScrollView>
