--- a/app/src/main/res/layout/row_shoe.xml
+++ b/app/src/main/res/layout/row_shoe.xml
@@ -1,61 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:paddingVertical="20dp">-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/imgShoe"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginHorizontal="20dp"-->
+<!--        android:layout_marginVertical="8dp"-->
+<!--        android:adjustViewBounds="true"-->
+<!--        android:background="@drawable/image_border"-->
+<!--        android:importantForAccessibility="no"-->
+<!--        android:src="@drawable/tidal_wave"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/tvShoeName"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:fontFamily="sans-serif-medium"-->
+<!--        android:text="Tidal Wave"-->
+<!--        android:textColor="@color/grey_focusable"-->
+<!--        android:textSize="20sp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/imgShoe"-->
+<!--        tools:ignore="HardcodedText" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/tvShoePrice"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:text="$24.99"-->
+<!--        android:textSize="20sp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintStart_toStartOf="@id/tvShoeName"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/tvShoeName"-->
+<!--        tools:ignore="HardcodedText" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/tvShoeNewPrice"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="50dp"-->
+<!--        android:text="$19.99"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textSize="20sp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintEnd_toEndOf="@id/imgShoe"-->
+<!--        app:layout_constraintTop_toTopOf="@id/tvShoePrice"-->
+<!--        tools:ignore="HardcodedText" />-->
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingVertical="20dp">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/imgShoe"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="8dp"
-        android:adjustViewBounds="true"
-        android:background="@drawable/image_border"
-        android:importantForAccessibility="no"
-        android:src="@drawable/tidal_wave"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:src="@drawable/tidal_wave" /> <!-- Hình ảnh mẫu -->
 
     <TextView
         android:id="@+id/tvShoeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Tidal Wave"
-        android:textColor="@color/grey_focusable"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgShoe"
-        tools:ignore="HardcodedText" />
-
-    <TextView
-        android:id="@+id/tvShoePrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="$24.99"
-        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/tvShoeName"
-        app:layout_constraintTop_toBottomOf="@id/tvShoeName"
-        tools:ignore="HardcodedText" />
-
-    <TextView
-        android:id="@+id/tvShoeNewPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:text="$19.99"
         android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/imgShoe"
-        app:layout_constraintTop_toTopOf="@id/tvShoePrice"
-        tools:ignore="HardcodedText" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:text="Shoe Name"
+        android:textSize="16sp"
+        android:gravity="center"/>
+</LinearLayout>
+
