--- a/app/src/main/res/menu/menu_customer.xml
+++ b/app/src/main/res/menu/menu_customer.xml
@@ -4,27 +4,27 @@
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/home"
+            android:id="@+id/action_home"
             android:icon="@drawable/home"
             android:title="@string/title_home" />
         <item
-            android:id="@+id/orders"
+            android:id="@+id/action_orders"
             android:icon="@drawable/order"
             android:title="@string/title_my_order" />
         <item
-            android:id="@+id/contact"
+            android:id="@+id/action_contact"
             android:icon="@drawable/contact"
             android:title="@string/title_contact" />
         <item
-            android:id="@+id/account"
+            android:id="@+id/action_account"
             android:icon="@drawable/account"
             android:title="@string/title_account" />
         <item
-            android:id="@+id/store"
+            android:id="@+id/action_map"
             android:icon="@drawable/map"
             android:title="@string/title_store" />
         <item
-            android:id="@+id/logout"
+            android:id="@+id/action_logout"
             android:icon="@drawable/logout"
             android:title="@string/title_logout" />
     </group>
